--- a/src/blocks/header/__logo/header__logo.css
+++ b/src/blocks/header/__logo/header__logo.css
@@ -1,13 +1,12 @@
 .header__logo{
-   width: 142px;
-   height: 33px;
-   padding: 45px 0 41px;
- }
+  width: 142px;
+  height: 33px;
+}
  
- @media (max-width: 767px) {
-   .header__logo {
-     width: 104px;
-     height: 25px;
-     padding: 28px 0 32px 27px;
-   }
- }
+@media (max-width: 767px) {
+  .header__logo {
+    width: 104px;
+    height: 25px;
+    /* padding: 28px 0 32px 27px; */
+  }
+}
