--- a/src/blocks/header/__email/header__email.css
+++ b/src/blocks/header/__email/header__email.css
@@ -1,5 +1,7 @@
-.header__email{
+.header__email {
+    margin: auto;
     font-size: 18px;
+    line-height: 22px;
     font-weight: 500;
     color:#fff;
     margin-right: 24px;
