--- a/src/blocks/header/__link/header__link.css
+++ b/src/blocks/header/__link/header__link.css
@@ -1,19 +1,9 @@
-.header__link{
-    color: #fff;
-    background-color: #000;
-    padding: 0;
-    border: none;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 1.2;
-    margin: 0;
-    cursor: pointer;
+.header__link {
     text-decoration: none;
-    /* text-decoration: none;
     color:#fff;
     font-size: 18px;
     padding-top:9px;
-    margin-right: 5px; */
+    margin-right: 5px;
 }
 .header__link:hover{
     opacity: 0.7;
