--- a/src/blocks/popup/__title-info/popup__title-info.css
+++ b/src/blocks/popup/__title-info/popup__title-info.css
@@ -1,6 +1,13 @@
 .popup__title-info{
+    color: black;
+    max-width: 358px;
     font-weight: 900;
+    font-size: 20px;
+    line-height: 1.2;
+    text-align: center;
+    margin: 0 auto;
+    /* font-weight: 900;
     font-size: 24px;
     margin: 32px auto 24px auto;
-    text-align: center;
+    text-align: center; */
 }
