--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -1,7 +1,6 @@
 .popup__title {
     margin: 0 0 29px;
-	
-	font-style: normal;
+	аont-style: normal;
 	font-weight: 900;
 	font-size: 24px;
 	line-height: 29px;
