--- a/src/blocks/authorization/__login-link/authorization__login-link.css
+++ b/src/blocks/authorization/__login-link/authorization__login-link.css
@@ -2,6 +2,7 @@
     color:#fff;
     font-size: 14px;
     margin-top:15px;
+    text-decoration: none;
 }
 .authorization__login-link:hover{
     opacity: 0.7;
